# cs-algorithms

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: algorithm_proposal.yml  bug_report.yml  config.yml
.github/workflows/: Linux CI.yml  Windows CI.yml  macOS CI.yml
algorithms/first-order/: CFirstOrder.h  FirstOrder.cpp  FirstOrder.hpp  README.md
algorithms/first-order-c/: CFirstOrder.c  README.md
algorithms/pid-controller/: PIDController.cpp  PIDController.hpp  README.md
algorithms/pid-controller-c/: CPid.c  CPid.h  README.md
simulations/: CMakeLists.txt  CPidSystemSim.c  CppPidSystemSim.cpp  PidSystemSim.c
